fix: overlap

--- a/src/activity-log-tools/ViewTemplate/ActivityLogBody.css
+++ b/src/activity-log-tools/ViewTemplate/ActivityLogBody.css
@@ -1,7 +1,7 @@
 .tw-gamification-activity-log-trend-chart {
   width: 100%;
   min-height: 200px;
-  height: 200px;
+  height: 300px;
   margin-bottom: 0.75em;
   border: 1px solid rgba(127, 127, 127, 0.2);
   border-radius: 10px;
